Closed
Bug 137965
Opened 24 years ago
Closed 24 years ago
Document contains no data on disconnect
Categories
(Core :: Networking: HTTP, defect, P3)
Tracking
()
VERIFIED
FIXED
mozilla1.0
People
(Reporter: xor, Assigned: darin.moz)
References
Details
(Keywords: regression, topembed, Whiteboard: [fixed-trunk] [adt3])
Attachments
(1 file)
|
1.10 KB,
patch
|
bbaetz
:
review+
rpotts
:
superreview+
asa
:
approval+
|
Details | Diff | Splinter Review |
I just saw this with trunk build 2002041203 on Win 98, but I've seen it in
earlier builds and think I've been seeing it for a couple weeks. This didn't
happen until recently, so this is a regression.
1. Begin loading a page in a browser tab.
2. Disconnect from your ISP before the download completes.
Expected results: The transfer is partially completed, perhaps warns that it
didn't complete.
Actual results: The transfer is partially completed, title bar even updates,
but after the disconnect, displays "Document contains no data" alert message,
which is clearly wrong.
Netscape used to show a "Transfer Interrupted" message, but I don't really want
that. I just don't want the irrelevant message, and especially the annoyance of
dismissing it.
Keywords: regression
Oh, have also begun seeing this in some situations when I am not disconnected,
but the page isn't completely loaded. When it is terminated mid-stream by
overtaxing the sockets on a 14.4K. It is irrelevant here too, and have been
seeing it for roughly the same time span, so it is probably the same cause.
Comment 2•24 years ago
|
||
-> Networking:http
Assignee: Matti → darin
Component: Browser-General → Networking: HTTP
QA Contact: imajes-qa → tever
| Assignee | ||
Comment 3•24 years ago
|
||
i know what the problem is...
-> moz 1.0 hopefully.
I've seen this intermittently with SOCKS Proxy 5 - and I think Ben has, too. It
may not be caused by socks directly, but it's exacerbated, perhaps.
| Assignee | ||
Comment 5•24 years ago
|
||
simple patch to suppress NS_ERROR_NET_RESET error code when some data has been
read.
| Assignee | ||
Comment 6•24 years ago
|
||
bbaetz: can you review this?
Comment 7•24 years ago
|
||
Comment on attachment 79730 [details] [diff] [review]
v1 patch
looks sensible. r=bbaetz
Attachment #79730 -
Flags: review+
Comment 8•24 years ago
|
||
Attachment #79730 -
Flags: superreview+
| Assignee | ||
Comment 9•24 years ago
|
||
fixed-on-trunk
| Assignee | ||
Updated•24 years ago
|
Whiteboard: [fixed-trunk]
Comment 10•24 years ago
|
||
Tever - Pls verify that the fix resolves the issue, and does not cause any new
regressions.
adt1.0.0-/adt3. This does not seem to be very severe issue for the user, nor
will it affect many users. Users, will now what happened because will be
dissonnected from their ISP.
| Assignee | ||
Comment 11•24 years ago
|
||
jaime: the disconnect may be temporary.. and may only effect some sockets. a
poor connection is not always 100% dead ;-)
Comment 12•24 years ago
|
||
darin, should this be marked resolved fixed?
| Assignee | ||
Comment 13•24 years ago
|
||
*** Bug 139164 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 14•24 years ago
|
||
*** Bug 139164 has been marked as a duplicate of this bug. ***
Comment 15•24 years ago
|
||
Comment on attachment 79730 [details] [diff] [review]
v1 patch
a=asa (on behalf of drivers) for checkin to the 1.0 branch
Attachment #79730 -
Flags: approval+
Comment 16•24 years ago
|
||
adding adt1.0.0+. Please check this into the branch as soon as possible and add
the fixed1.0.0 keyword.
| Assignee | ||
Comment 17•24 years ago
|
||
fixed-on-branch
Comment 18•24 years ago
|
||
*** Bug 135182 has been marked as a duplicate of this bug. ***
Comment 19•24 years ago
|
||
*** Bug 140711 has been marked as a duplicate of this bug. ***
Comment 20•24 years ago
|
||
I came here from bug 135182 which was just closed as a duplicate of this one.
Either it is not a duplicate, or it has not been fixed.
I am still getting this popup when browsing. It certainly didn't disappear on
the 18th when a patch was checked into the trunk. (I'm using 2002043003 trunk
build under XP.)
Also see http://www.mozillazine.org/talkback/read.php?f=1&i=2497&t=2475, where
this bug, still unresolved, as caused problems when it occurs within form submits.
From bug 135182, this happens randomly for no apparent reason, and offers no
easy way to reproduce or understand what's happening. The steps to reproduce in
the description of THIS bug don't necessarily apply.
Comment 21•24 years ago
|
||
See also bug 141451.
Comment 22•24 years ago
|
||
*** Bug 136796 has been marked as a duplicate of this bug. ***
Comment 23•24 years ago
|
||
Steps to reproduce - see bug 135182 comment 10. (Originally this did not
generate the behviour for me, now it does every time.)
Comment 24•24 years ago
|
||
*** Bug 142238 has been marked as a duplicate of this bug. ***
Comment 25•24 years ago
|
||
*** Bug 142688 has been marked as a duplicate of this bug. ***
Comment 26•23 years ago
|
||
verified 09/05/02 builds - win98, linux rh6, mac osX
Status: RESOLVED → VERIFIED
Keywords: fixed1.0.0 → verified1.0.0
You need to log in
before you can comment on or make changes to this bug.
Description
•