fixes bug 137965 "Document contains no data on disconnect" r=bbaetz sr=rpotts